--- a/style.css
+++ b/style.css
@@ -83,14 +83,13 @@ nav ul li a:hover::after{
 /* ----------------- About Section ----------------- */
 .header-text{
     margin-top: 20%;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .header-text h1{
     font-size: 60px;
     margin-top: 20px;
 }
-
 .header-text h1 span{
     color: var(--primary-color);
 }
@@ -118,7 +117,10 @@ nav ul li a:hover::after{
 .about-col-2{
     flex-basis: 60%;
 }
-
+.about-col-2 p span{
+    color: var(--accent-color);
+    font-size: 22px;
+}
 .Sub-title{
     font-size: 60px;
     font-weight: 600;
@@ -160,7 +162,7 @@ nav ul li a:hover::after{
 
 .tab-contents ul li span{
     color: var(--accent-color);
-    font-size: 14px;
+    font-size: 20px;
 }
 
 .tab-contents{
